--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,15 @@
     "swift.path": "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin",
     "swift.swiftEnvironmentVariables": {
         "DEVELOPER_DIR": "/Applications/Xcode.app"
-    }
+    },
+    "swift.sourcekit-lsp.serverArguments": [
+"-Xswiftc",
+"-sdk",
+"-Xswiftc",
+"/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneSimulator.platform/Developer/SDKs/iPhoneSimulator.sdk",
+"-Xswiftc",
+"-target",
+"-Xswiftc",
+"x86_64-apple-ios13.6-simulator",
+],
 }
